# ufo-simulation-schulung

./: .gitignore  .pycharm-package-mapping.md  LICENSE  README.md  T3-1-SUMMARY.md  T3-SUMMARY.md  delete.old  dum_creator.py  pyproject.toml  requirements.txt  setup.py  setup_new.py  setup_v2.py
.github/: copilot-instructions.md  instructions.md
.github/workflows/: setup-verification.yml
docs/: TESTING_DEBUGGING_TOOLS.md  planung.md
docs/description/: Schulungsablauf.md  setup-anleitung.md
docs/description/tasks/: aufgabe-1-winkelberechnung.md  aufgabe-2-ufo-autopilot.md
docs/dev/: CHANGELOG.md  MIGRATION_CHECKLIST.md  bugfix-import-linter-integration.md  bugfix-textcatalog-phases.md  documentation-audit-tools.md  ide-warnings-plan.md  import-analysis.md  import-fix-summary.md  lock-usage-validation.md  setup-system.md  tools-structure.md  tools-ui-reference.md
docs/dev/refactoring/: 2025-11-23-bugfixes-rich-ui.md  2025-11-23-rich-ui-integration.md  future-contracts.md  lock-usage-validation.md  test-structure-reorganization.md
docs/dev/temp/: refactoring-2025-11-21-condition-waiter.md  setup-system-tools.md  testing-tools.md
docs/guidelines/: Setup-configuration-gd.md  general-gd.md  project-specific-gd.md
docs/guidelines/project/: type-checker-validation.md
docs/planning/: REFACTORING_DOCUMENTATION.md  REFACTORING_INFRASTRUCTURE.md  dokumentenstruktur.md  implementation-status.md  refactoring-analysis.md  refactoring-tracker.md  snapshot-sequence-testing-completed.md  solution-summary.md  ui-standardization-completed.md
docs/specs/architecture/: README.md  core-simulation-importregeln.md  core-simulation-zielbild.md
docs/specs/notes/: introductions.md
dumps/: 28714926292_complete_dump.yaml
src/: __init__.py
src/core/: __init__.py
src/core/simulation/: __init__.py  autopilot_base.py  config.py  exceptions.py  logging_setup.py  ufo_main.py  ufosim.py
src/core/simulation/command/: __init__.py  types.py
src/core/simulation/exceptions/: __init__.py  simulation.py
src/core/simulation/infrastructure/: __init__.py  config.py  logging_config.py  logging_setup.py  simulation_config.py
src/core/simulation/observer/: __init__.py  heading_delta.py  observer.py  phase.py
src/core/simulation/physics/: __init__.py  engine.py
src/core/simulation/state/: __init__.py  manager.py  state.py
src/core/simulation/synchronization/: __init__.py  _lock_wrapper.py  conditional_lock.py  instance_lock.py  lock_wrapper.py  module_lock.py
src/core/simulation/utils/: __init__.py  condition_waiter.py  geometry.py  global_lock.py  instance_lock.py  maths.py  module_lock.py  threads.py  validation.py
src/task/: __init__.py
src/task/angle/: __init__.py  angle.py
src/task/autopilot/: __init__.py  autopilot.py
tests/: _helpers.py  conftest.py  python_dump.txt  test_condition_waiter.py  test_conditional_lock.py  test_exceptions.py  test_immutable_physics.py  test_lock_wrapper.py  test_logging_setup.py  test_maths.py  test_observer.py  test_observer_integration_ufosim.py  test_observer_smoke.py  test_physics_engine.py  test_state_import.py  test_state_manager_smoke.py  test_state_module_independence.py  test_synchronization_instance_lock.py  test_synchronization_module_lock.py  test_threading_tools_demo.py  test_utils_global_lock.py  test_utils_instance_lock.py  test_utils_module_lock.py  test_utils_threads.py
tests/core/simulation/command/: test_types_smoke.py
tests/core/simulation/exceptions/: test_exceptions.py
tests/core/simulation/infrastructure/: test_logging_setup.py
tests/core/simulation/observer/: test_heading_delta.py  test_heading_utils.py  test_observer.py  test_smoke.py
tests/core/simulation/physics/: test_physics_engine.py
tests/core/simulation/state/: test_manager.py  test_state_import.py  test_state_manager_smoke.py  test_state_module_independence.py
tests/core/simulation/synchronization/: test_conditional_lock.py  test_instance_lock.py  test_lock_wrapper.py  test_module_lock.py
tests/core/simulation/utils/: test_condition_waiter.py  test_geometry.py  test_maths.py  test_threading_tools_demo.py  test_validation.py
tests/setup/: test_batch_executor_integration.py  test_chained_map.py  test_step_ui_contract.py
tests/setup_tools/: test_type_checker.py
tests/setup_tools/setup/domain/: test_config_resolver.py
tools/: __init__.py  analyze_imports.py  bootstrap.py  bootstrap_env.py  common.py
tools/analysis/: __init__.py  files.py  imports.py
tools/common/: __init__.py  error_log.py
tools/dumps/: 28715436311_tools_dump_new.yaml  28840247143_final_dump.yaml  29069497210_Test_vorführung.yaml  tools_dump.yaml
tools/setup/: __init__.py  bootstrap.py  config.py  logging.py  profile.py
tools/setup/boot/: __init__.py  context.py  profile.py
tools/setup/boot/steps/: __init__.py  check.py  dependencies.py  environment.py  linting.py
tools/setup/domain/: __init__.py  config.py  config_resolution.py  profile.py  resolver.py
tools/setup/steps/: __init__.py  create_env.py  install_deps.py  linter_check.py  test_runner.py  type_checker.py  typing_check.py
tools/setup/steps/base/: __init__.py  decorator.py  meta.py  result.py  step.py
tools/setup/steps/executer/: __init__.py  batch_executor.py  executer_map.py  task.py  task_list.py
tools/setup/steps/typing_check/: __init__.py  checker.py  model.py
tools/setup/steps/worker/: __init__.py  interpreter.py
tools/setup/ui/: __init__.py  console.py
tools/setup/ui/err/: __init__.py  error.py
tools/setup/ui/output/: __init__.py  error.py  message.py
tools/setup/ui/progress/: __init__.py  mode.py  step.py
tools/setup/ui/resources/: __init__.py  block.py  catalog.py  icons.py  setup_config.toml  setup_ui.toml
tools/setup/utils/: __init__.py  context.py  module.py  runner.py  task_naming.py  ui_text.py  version.py
tools/ui/: __init__.py  console.py
tools/ui/resources/: __init__.py  catalog.py  setup_flow_text.toml  text_blocks.toml  textblock.toml  ui_text.toml
ufo_simulation/: __init__.py  autopilot.py  autopilot_base.py  ufo_main.py
(+9 files in other folders)
