[build-system]
requires = ["setuptools>=66.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufo-simulation-schulung"
version = "1.0.0"
description = "UFO/Drohnen-Simulation mit Autopilot-Schulungsvorlage für Anfänger"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "tomtastisch", email = "tom@example.com" }
]
keywords = ["simulation", "education", "ufo", "autopilot", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.4.0",
    "flake8>=7.0.0",
]

[project.urls]
Repository = "https://github.com/tomtastisch/ufo-simulation-schulung"
Issues = "https://github.com/tomtastisch/ufo-simulation-schulung/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
core = [
    "simulation/ressources/*.png",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }