[build-system]
requires = ["setuptools>=66.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufo-simulation-schulung"
version = "1.0.0"
description = "UFO/Drohnen-Simulation mit Autopilot-Schulungsvorlage für Anfänger"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "tomtastisch", email = "tomtastisch@icloud.com" }
]
keywords = ["simulation", "education", "ufo", "autopilot", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
    "PyQt5>=5.15.11",
    "PyQt5-sip>=12.17.1",
    "numpy>=2.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.1",
    "threadpoolctl>=3.5.0",
    "py-spy>=0.3.14",
    "black>=24.4.0",
    "flake8>=7.0.0",
]

[project.urls]
Repository = "https://github.com/tomtastisch/ufo-simulation-schulung"
Issues = "https://github.com/tomtastisch/ufo-simulation-schulung/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
core = [
    "simulation/ressources/*.png",
]


[tool.pytest.ini_options]
# Pytest-Konfiguration für die UFO-Simulation
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Timeout-Konfiguration für Deadlock-Erkennung
timeout = 300
timeout_method = "thread"

# Test-Output-Einstellungen
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# Marker für unterschiedliche Test-Typen
markers = [
    "slow: Tests die länger als 1 Sekunde dauern",
    "integration: Integration-Tests",
    "threading: Tests mit Threading/Locks",
]